--- a/recommender_system/recommender_system.ipynb
+++ b/recommender_system/recommender_system.ipynb
@@ -1592,7 +1592,7 @@
         "# Apply the model to the test set to predict the rating\n",
         "test['rating'] = test.apply(lambda x: svd.predict(x.user_id, x.product_id).est, axis = 1)\n",
         "# Save the prediction result to a new CSV file\n",
-        "test[['ID', 'rating']].to_csv('./32889356.csv', index = False)"
+        "test[['ID', 'rating']].to_csv('./labeled_test.csv', index = False)"
       ]
     }
   ],
