--- a/big_data/used_cars.ipynb
+++ b/big_data/used_cars.ipynb
@@ -68,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Load the data from the CSV files\n",
-    "df = spark.read.option('inferSchema', True).csv(\"wrangled_used_cars.csv\", header=True)"
+    "df = spark.read.option('inferSchema', True).csv(\"used_cars_data.csv\", header=True)"
    ]
   },
   {
